feat(product,fran.branch): Fix Exceptions and docs

--- a/ms-franchise/src/main/resources/messages.properties
+++ b/ms-franchise/src/main/resources/messages.properties
@@ -6,6 +6,9 @@ general.update.success=Recurso actualizado con exito
 
 #validations
 exception.model.notfound=No encontrado
+exception.branch.notfound=No encontrado Sucursal
+exception.product.notfound=No encontrado Producto
+exception.franchise.notfound=No encontrado Franquicia
 exception.model.email=Email ya se encuentra registrado
 exception.model.document=Numero de documento ya se encuentra registrado
 exception.model.pass=Contraseñas no coinciden
